# UselessApps

./: CMakeLists.txt  README.md  main.cpp
include/: GlobalConstants.h  StartupHandler.h  UselessStats.h
resources/qml/: main.qml
src/: StartupHandler.cpp  UselessStats.cpp  main.cpp
